Prevented photos from cropping

--- a/src/styles/components/carousel.scss
+++ b/src/styles/components/carousel.scss
@@ -30,9 +30,8 @@
     }
     
     img {
-        object-fit: cover;
+        object-fit: contain;
         height: 100%;
-        min-width: 100vh;
     }
 }
 
